dream-car-crm/force-app/main/default/objects/Planned_Sale__c/Planned_Sale__c.object-meta.xml
<CustomObject>
    <label>Planned Sale</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Planned Sale Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planned Sales</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>