dream-car-crm/force-app/main/default/objects/Planned_Sale__c/fields/Planned_Count__c.field-meta.xml
<CustomField>
    <fullName>Planned_Count__c</fullName>
    <label>Planned Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>